<resources>
    <string name="app_name">Movieteca</string>
    <string name="app_name_motto">Entertainment at your fingertips</string>
    <string name="app_version">App version: 2.0.0</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="age">Age</string>
    <string name="birthplace">Birthplace</string>
    <string name="bio">Biography</string>
    <string name="role_movie">Appeared in movies like</string>
    <string name="role_show">Appeared in shows like</string>
    <string name="details">Details</string>
    <string name="trailers">Trailers</string>
    <string name="cast">Cast</string>
    <string name="similar">Similar</string>
    <string name="search_hint">Search movies, tv shows, casts</string>
    <string name="no_fav">No favorite content found</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="now_in_theaters_movies">Now In Theaters</string>
    <string name="popular_movies">Popular</string>
    <string name="top_rated_movies">Top Rated</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="view_all">View All</string>
    <string name="nothing">Nothing found. Try again!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="press_again">Press again for exit!</string>
    <string name="short_label">Favorites</string>
    <string name="long_label">View Favorites</string>
    <string name="disabled_label">Favorites</string>
    <string name="search_label">Search for shows, movies and actors.</string>
    <string name="credits">Special thanks</string>
    <string name="info">Movieteca is an entertainment app that keeps you up to date with your favorite movies and series.\n\nFeatures:\n\n* List of movies or series that are now playing, popular, top rated or upcoming.\n* See details about movies, series or actors.\n* Search over 436,607 movies, 78,519 series, and 1,282,792 actors.\n* Mark as favorites.</string>
    <string name="alert">This app doesn`t allow you to watch movies!\n"Piracy is illegal."</string>
    <string name="share">Share</string>
    <string name="rate">Rating</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Need a TMDb Account? Sign up</string>
    <string name="guest">Continue as Guest</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="genres">Genres</string>
    <string name="profile">Profile</string>
    <string name="airing_today">Airing today</string>
    <string name="on_the_air">On the air</string>
    <string name="my_rated_movies">My rated Movies</string>
    <string name="my_rated_tv_shows">My rated TV Shows</string>
    <string name="logout">Logout</string>
    <string name="reviews">Reviews</string>
    <string name="see_more">See more</string>
    <string name="main">Main</string>
    <string name="latest_movie">Latest Movie</string>
    <string name="popular_casts">Popular Casts</string>
    <string name="latest_tv_show">Latest TV Show</string>
</resources>
