<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_home_24px"
        android:title="@string/home"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/search"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/search"/>

    <item android:id="@+id/main"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_dehaze_24px"
        android:title="@string/main"/>

    <item android:id="@+id/favorites"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_favorite_24px"
        android:title="@string/favorites"/>

    <item android:id="@+id/profile"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/profile"/>

</menu>