<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:src="@drawable/loginscreen"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:background="@color/primaryDarkColorT"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintBottom_toTopOf="@id/progressBar"
            android:layout_marginBottom="12dp"
            android:textColor="@color/colorWhite"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            app:layout_constraintBottom_toTopOf="@id/form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            android:indeterminate="true"
            android:visibility="invisible"
            android:indeterminateTint="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/form"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:background="@color/colorWhite"
                android:padding="12dp"
                android:hint="@string/username"
                android:gravity="center"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:padding="12dp"
                android:hint="@string/password"
                android:gravity="center"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in"
                android:layout_marginTop="16dp"
                android:background="@color/primaryLightColor"
                android:textColor="@color/colorWhite"
                android:text="@string/sign_in"
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_up"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/guest"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/primaryLightColor"
            android:textColor="@color/colorWhite"
            android:text="@string/guest"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>