<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:elevation="2dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_toEndOf="@id/logo"
                        android:orientation="vertical"
                        android:layout_marginStart="4dp"
                        android:layout_centerVertical="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/colorWhite"
                            android:text="@string/app_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textStyle="italic"
                            android:textSize="14sp"
                            android:textColor="@color/colorWhite"
                            android:text="@string/app_name_motto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textStyle="normal"
                            android:textColor="@color/colorWhite"
                            android:text="@string/app_version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/share"
                        android:contentDescription="@string/share"
                        android:src="@drawable/ic_baseline_share_24px"
                        android:padding="16dp"
                        android:tint="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageButton
                        android:id="@+id/rating"
                        android:contentDescription="@string/rate"
                        android:src="@drawable/ic_baseline_star_rate_18px"
                        android:padding="16dp"
                        android:tint="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/alert"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/info"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/credits"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_tmdb"
                            android:contentDescription="@string/credits"
                            android:layout_width="70dp"
                            android:layout_height="50dp" />
                        <ImageView
                            android:src="@drawable/glide"
                            android:contentDescription="@string/credits"
                            android:layout_width="70dp"
                            android:layout_height="50dp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>