<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:background="@color/primaryColorT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_height="?attr/actionBarSize">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:drawableStart="@mipmap/ic_launcher"
                        android:textColor="@color/colorWhite"
                        android:text="@string/home"
                        android:id="@+id/toolbar_text"
                        android:textSize="18sp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:layout_toStartOf="@id/movies"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/movies"
                        android:padding="16dp"
                        android:layout_toStartOf="@id/tv_shows"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/movies"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/tv_shows"
                        android:padding="16dp"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:clickable="true"
                        android:textSize="12sp"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:textColor="@color/colorWhite"
                        android:text="@string/tv_shows"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>