<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorWhite"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:visibility="gone"
        android:scrollbars="none"
        android:id="@+id/container"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/main_item"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:contentDescription="@string/app_name_motto"
                        android:id="@+id/main_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>

                <RelativeLayout
                    android:background="@drawable/gradient_light"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_above="@id/connect"
                        android:layout_marginBottom="4dp"
                        android:id="@+id/main_title"
                        android:padding="16dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <FrameLayout
                        android:id="@+id/connect"
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/airing_today"

                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="8dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/now_playing_view_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:text="@string/view_all"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="8dp"
                            android:textColor="@color/colorWhite" />

                    </FrameLayout>

                </RelativeLayout>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_now_showing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/popular_movies"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/popular_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/view_all"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorWhite" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/top_rated_movies"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/top_rated_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/view_all"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorWhite" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/on_the_air"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/upcoming_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/view_all"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorWhite" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/genres"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_genre"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>